# check-manage

./: .gitignore  CLAUDE.md  README.md  check-manage-intro.pptx  check-manage-ppt-plan.json  import_inspection_template.xlsx  index.html  package-lock.json  package.json  playwright.config.ts  start.sh  test_fields_import.xlsx  vite.config.ts  vitest.config.ts  字段导入模板.csv
.claude/: plan_richtext.md  settings.local.json
deploy/: frpc.toml  frps.toml
docs/: OpenAPI接口文档.md  README.md  ai-chat-功能说明与方案设计.md  api-version-delete.md  check-manage 优势分析报告 - 增强版.pptx  check-manage 优势分析报告.pptx  (+20 more)
mcp-server/: app_config.py  auth.py  context.py  db.py  main.py  memory_client.py  mongo_query.py  pyproject.toml  query_engine.py  rbac.py
mcp-server/tests/: conftest.py  test_app_config.py  test_auth.py  test_export_collection_excel.py  test_integration_db.py  test_list_collections.py  test_list_export_scripts.py  test_memory_tools.py  test_mongo_query.py  test_query_collection.py  test_query_engine.py  test_rbac.py  test_read_data_file.py  test_read_upload.py  test_run_export_script.py  test_run_python.py  test_save_artifact.py  test_tool_dispatch_allowlist.py  test_tools_endpoint.py
mcp-server/tools/: __init__.py  _server_imports.py  export_collection_excel.py  list_collections.py  list_export_scripts.py  memory.py  query_collection.py  read_data_file.py  read_upload.py  run_export_script.py  run_python.py  save_artifact.py
python-client/: README.md  pyproject.toml
python-client/checkmanage_openapi/: __init__.py  client.py  exceptions.py
python-client/tests/: test_client.py
(+835 files in other folders)
