[project]
name = "check-manage-mcp"
version = "0.1.0"
description = "Standalone MCP server exposing platform data to AI agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "pandas>=2.1",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]
